# Astromapper-ruby

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  README_GO.md  astromapper.gemspec  main.go  teradoma-astromapper.yml
docs/: generation-pipeline.md
go-version/: .gitignore  README.md  _astromapper.example.yml  astromapper  go.mod  go.sum  main.go
jekyll-display/: astromap.html
lib/: astromapper.rb
lib/astromapper/: about.rb  astro.rb  builder.rb  cli.rb  exporter.rb  generator.rb  parser.rb  svg.rb  version.rb
ruby-version/: Gemfile  LICENSE.txt  README.md  Rakefile  astromapper.gemspec
ruby-version/lib/: astromapper.rb
ruby-version/macropedia/: macropedia.sector.txt  sector_ORBITS-TEST_20250818-081138.json  sector_ORBITS-TEST_20250818-081138.txt  teradoma-archipelago.json  teradoma-archipelago.sector.txt  teradoma-archipelago.tab  teradoma-archipelago.test.json  teradoma.json
rust-cli-version/: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  _astromapper.example.yml
rust-cli-version/src/: config.rs  data.rs  error.rs  lib.rs  rng.rs
rust-cli-version/src/builders/: mod.rs  orbit_builder.rs  sector_builder.rs  star_builder.rs  tables.rs  volume_builder.rs  world_builder.rs
rust-cli-version/src/formatters/: ascii.rs  islands.rs  json.rs  mod.rs  svg.rs
rust-cli-version/src/models/: mod.rs  orbit.rs  sector.rs  star.rs  trade_codes.rs  volume.rs  world.rs
rust-cli-version/src/rules/: expr.rs  mod.rs  ruleset.rs  runtime.rs
rust-cli-version/src/rules/builtin/: cepheus.yml
rust-cli-version/tests/: generation.rs
templates/: config.erb
(+78 files in other folders)
