[package]
name = "astromapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "astromapper_core"
path = "src/lib.rs"

[[bin]]
name = "astromapper"
path = "src/bin/cli.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Hashing for seed conversion
fnv = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time for file naming
chrono = "0.4"

# For future Tauri integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
